[gd_scene load_steps=26 format=2]

[ext_resource path="res://Zombie.gd" type="Script" id=1]
[ext_resource path="res://Zombie/Walk1.png" type="Texture" id=2]
[ext_resource path="res://Zombie/Walk2.png" type="Texture" id=3]
[ext_resource path="res://Zombie/Walk3.png" type="Texture" id=4]
[ext_resource path="res://Zombie/Walk4.png" type="Texture" id=5]
[ext_resource path="res://Zombie/Walk5.png" type="Texture" id=6]
[ext_resource path="res://Zombie/Walk6.png" type="Texture" id=7]
[ext_resource path="res://Zombie/Dead1.png" type="Texture" id=8]
[ext_resource path="res://Zombie/Dead2.png" type="Texture" id=9]
[ext_resource path="res://Zombie/Dead3.png" type="Texture" id=10]
[ext_resource path="res://Zombie/Dead4.png" type="Texture" id=11]
[ext_resource path="res://Zombie/Dead5.png" type="Texture" id=12]
[ext_resource path="res://Zombie/Dead6.png" type="Texture" id=13]
[ext_resource path="res://Zombie/Dead7.png" type="Texture" id=14]
[ext_resource path="res://Zombie/Dead8.png" type="Texture" id=15]
[ext_resource path="res://Zombie/Attack1.png" type="Texture" id=16]
[ext_resource path="res://Zombie/Attack2.png" type="Texture" id=17]
[ext_resource path="res://Zombie/Attack3.png" type="Texture" id=18]
[ext_resource path="res://Zombie/Attack4.png" type="Texture" id=19]
[ext_resource path="res://Zombie/Attack5.png" type="Texture" id=20]
[ext_resource path="res://Zombie/Attaxk6.png" type="Texture" id=21]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 16 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 21 ) ],
"loop": false,
"name": "attack",
"speed": 6.0
}, {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 14 ), ExtResource( 15 ) ],
"loop": false,
"name": "dead",
"speed": 15.0
}, {
"frames": [ ExtResource( 2 ) ],
"loop": true,
"name": "stay",
"speed": 5.0
}, {
"frames": [ ExtResource( 2 ), ExtResource( 3 ), ExtResource( 4 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 7 ) ],
"loop": true,
"name": "walk",
"speed": 6.0
} ]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 21.7818, 47.6677 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 47.0687, 15.9151 )

[sub_resource type="CapsuleShape2D" id=4]
radius = 23.0
height = 48.0

[node name="Zombie" type="KinematicBody2D"]
position = Vector2( 33, 51 )
script = ExtResource( 1 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
scale = Vector2( 0.25, 0.25 )
frames = SubResource( 1 )
animation = "stay"
flip_h = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.218208, 1.93174 )
shape = SubResource( 2 )

[node name="DeadCollision" type="CollisionShape2D" parent="."]
position = Vector2( -1.0687, 8.0849 )
shape = SubResource( 3 )
disabled = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 2 )
shape = SubResource( 4 )

[node name="StandsTimer" type="Timer" parent="."]

[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="StandsTimer" to="." method="_on_StandsTimer_timeout"]
